updated notebooks and README.md

--- a/notebooks/2_physionet_DBwise_yaml_files.ipynb
+++ b/notebooks/2_physionet_DBwise_yaml_files.ipynb
@@ -5,9 +5,9 @@
    "id": "7999d565",
    "metadata": {},
    "source": [
-    "# Yaml files of Database-wise Split for Training and Testing\n",
+    "# <font color = teal> Yaml files of database-wise split for training and testing </font>\n",
     "\n",
-    "With this notebook, you can create the yaml files needed in training and testing with a data split which is made **database-wise**. The so-called \"original data split\" should be first made with the script `create_data_split_csvs.py`. This ensures that there are already one csv file for each database. The combined csv files are created below. More detailed information about this is available in the notebook [Introduction for Data Handling](1_introduction_data_handling.ipynb). \n",
+    "With this notebook, you can create the yaml files needed in training and testing with a data split which is made **database-wise**. The so-called \"original data split\" should be first made with the script `create_data_split_csvs.py`. This ensures that there are already one csv file for each database. The combined csv files are created below. More detailed information about this is available in the notebook [Introduction to data handling](1_introduction_data_handling.ipynb). \n",
     "\n",
     "------\n",
     "\n",
@@ -25,7 +25,7 @@
     "# Training parameters\n",
     "batch_size = 10\n",
     "num_workers = 0\n",
-    "epochs = 5\n",
+    "epochs = 1\n",
     "lr = 0.003\n",
     "weight_decay = 0.00001\n",
     "\n",
@@ -165,7 +165,7 @@
    "id": "0548bf30",
    "metadata": {},
    "source": [
-    "## Combinations of Training, Validation and Testing sets"
+    "## <font color = teal> Combinations of Training, Validation and Testing sets </font>"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "id": "81e08de4",
    "metadata": {},
    "source": [
-    "## Combined CSV files and Yaml files"
+    "## <font color = teal> Combined CSV files and Yaml files </font>"
    ]
   },
   {
