--- a/notebooks/2_physionet_stratified_yaml_files.ipynb
+++ b/notebooks/2_physionet_stratified_yaml_files.ipynb
@@ -5,9 +5,9 @@
    "id": "dca53a29",
    "metadata": {},
    "source": [
-    "# Yaml files of Stratified Split for Training and Testing\n",
+    "# <font color = teal> Yaml files of stratified split for training and testing </font>\n",
     "\n",
-    "With this notebook, you can create the yaml files needed in training and testing with a data split which is made  using **stratifiction**. More detailed information about the stratified data split itself is available in the notebook [Introduction for Data Handling](1_introduction_data_handling.ipynb).\n",
+    "With this notebook, you can create the yaml files needed in training and testing with a data split which is made  using **stratification**. More detailed information about the stratified data split itself is available in the notebook [Introduction to data handling](1_introduction_data_handling.ipynb).\n",
     "\n",
     "------\n",
     "\n",
@@ -23,14 +23,14 @@
    "source": [
     "# --- Parameters for the yaml files -------------\n",
     "# Training parameters\n",
-    "batch_size = 64\n",
+    "batch_size = 10\n",
     "num_workers = 0\n",
-    "epochs = 50\n",
+    "epochs = 1\n",
     "lr = 0.003\n",
     "weight_decay = 0.00001\n",
     "\n",
     "# Device configurations\n",
-    "device_count = 2\n",
+    "device_count = 1\n",
     "\n",
     "# -----------\n",
     "# Decision threshold for predictions\n",
@@ -184,10 +184,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d58cc57",
+   "metadata": {},
+   "source": [
+    "## <font color = teal> Combinations of training and testing sets\n",
+    "\n",
+    "With stratified split, there are **five** different possibilities to split the databases into training and testing sets:\n",
+    "\n",
+    "    1) train: PTB_PTBXL.csv, INCART.csv, G12EC.csv, ChapmanShaoxing_Ningbo.csv\n",
+    "       test: CPSC_CPSC-Extra.csv\n",
+    "       \n",
+    "    1) train: PTB_PTBXL.csv, INCART.csv, G12EC.csv, CPSC_CPSC-Extra.csv\n",
+    "       test: ChapmanShaoxing_Ningbo.csv\n",
+    "\n",
+    "    2) train: PTB_PTBXL.csv, INCART.csv, ChapmanShaoxing_Ningbo.csv, CPSC_CPSC-Extra.csv\n",
+    "       test: G12EC.csv\n",
+    "\n",
+    "    3) train: PTB_PTBXL.csv, G12EC.csv, ChapmanShaoxing_Ningbo.csv, CPSC_CPSC-Extra.csv\n",
+    "       test: INCART.csv\n",
+    "\n",
+    "    4) train: G12EC.csv, INCART.csv, ChapmanShaoxing_Ningbo.csv, CPSC_CPSC-Extra.csv\n",
+    "       test: PTB_PTBXL.csv\n",
+    "       \n",
+    "Training set will be stratified into training and validation sets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5773a438",
    "metadata": {},
    "source": [
-    "Let's combine the right csv files of training, validation and testing sets first, e.g., `train_split_1_1.csv`, `val_split_1_1.csv` and `test_split_1.csv`."
+    "Let's combine the csv files of training, validation and testing sets, e.g., `train_split_1_1.csv`, `val_split_1_1.csv` and `test_split_1.csv`, into a list of lists."
    ]
   },
   {
