--- a/notebooks/3_introduction_training.ipynb
+++ b/notebooks/3_introduction_training.ipynb
@@ -5,11 +5,11 @@
    "id": "0df8c166",
    "metadata": {},
    "source": [
-    "# Introduction for Training a Model\n",
+    "## <font color = teal> Introduction to training models </font>\n",
     "\n",
     "Training can be performed either with a single yaml file or with several yaml files located in the same directory.\n",
     "\n",
-    "To train a model, you'll need csv files to tell a model which parts of the data (i.e., which ECGs) are used as training data, which part as validation data and which part as testing data, and yaml files based on these csv files for detailed configurations. The csv files can be created by following the introductions in the notebook [Introduction for Data Handling](1_introduction_data_handling.ipynb). Yaml files can be created with the notebooks [Yaml files of Database-wise Split for Training and Prediction](2_physionet_DBwise_yaml_files.ipynb) and [Yaml files of Stratified Split for Training and Prediction](2_physionet_stratified_yaml_files.ipynb).\n",
+    "To train a model, you'll need csv files to tell a model which parts of the data (i.e., which ECGs) are used as training data, which part as validation data and which part as testing data, and yaml files based on these csv files for detailed configurations. The csv files can be created by following the introductions in the notebook [Introduction to data handling](1_introduction_data_handling.ipynb). Yaml files can be created with the notebooks [Yaml files of database-wise split for training and testing](2_physionet_DBwise_yaml_files.ipynb) and [Yaml files of stratified split for training and testing](2_physionet_stratified_yaml_files.ipynb).\n",
     "\n",
     "------\n"
    ]
@@ -47,7 +47,7 @@
     "\n",
     "<font color ='red'>**NOTE!**</font> The `device_count` attribute in the yaml file should be considered. It refers to the number of GPUs which are used in training. This reflects to the `batch_size` attribute since the batch size should be divided by device count. Obviously, the result of the division should be a positive integer. \n",
     "\n",
-    "### CUDA configurations (optional)\n",
+    "### <font color = teal> CUDA configurations </font>\n",
     "\n",
     "If you want to spesify the CUDA devices you use in training, you can use the `CUDA_VISIBLE_DEVICES` variable. For example, if you want to run only the first GPU, you can write `CUDA_VISIBLE_DEVICES=0` as a first argument in a command line as follows:\n",
     "\n",
@@ -68,7 +68,7 @@
    "id": "4a601f85",
    "metadata": {},
    "source": [
-    "### Saving the results\n",
+    "### <font color = teal> Saving the results </font>\n",
     "\n",
     "Trained model(s), training history as well as ROC curves and logits of the validation phase will be saved in a subdirectory of the `experiments` directory. ROC curves will have a directory of their own. They are drawn in the first, middle and last epochs; The rest will be saved after the last epoch. Each file and directory will be named after the used yaml file or the directory where the yaml files exist. \n",
     "\n",
@@ -84,7 +84,7 @@
    "id": "c5f17d5e",
    "metadata": {},
    "source": [
-    "### Terminal commands\n",
+    "### <font color = teal> Terminal commands </font>\n",
     "\n",
     "Run a terminal command which consist of the script and the yaml file *or* the directory where all the yaml files are located, so one of the followings\n",
     "\n",
@@ -101,7 +101,7 @@
    "source": [
     "-----------------\n",
     "\n",
-    "## Example: Smoke testing"
+    "## <font color = teal> Example: Smoke testing </font>"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "source": [
     "<font color = red>**NOTE!**</font> <font color = green> **Here, the assumption is that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `physionet_data_smoke` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
     "\n",
-    "### One yaml file\n",
+    "### <font color = teal> One yaml file </font>\n",
     "\n",
     "Let's use the presented yaml file `train_smoke.yaml` from `/configs/training/` for some smoke testing. The csv files `train_split_1_1.csv` and `val_split_1_1.csv` have already been constructed with the script `create_data_split_csvs.py`. (More details about this in the notebook [Introduction for Data Handling](1_introduction_data_handling.ipynb)) That said, we are training a model using the stratified split of the data. The first rows from both csvs are as follows\n",
     "\n",
@@ -149,9 +149,9 @@
     "python train_model.py train_smoke.yaml\n",
     "```\n",
     "\n",
-    "The trained model and training history can be found as `train_smoke.pth` and `train_smoke_history.pickle` in the `experiments` directory. The ROC curve is saved in the `ROC_train_smoke` directory as `roc-e1.png`, named after the number of the epoch on which it's been drawn.\n",
+    "The trained model, the logits and training history can be found as `train_smoke.pth`, `train_smoke_val_logits.csv` and `train_smoke_history.pickle` in the `experiments` directory. The ROC curve is saved in the `ROC_train_smoke` directory as `roc-e1.png`, named after the number of the epoch on which it's been drawn.\n",
     "\n",
-    "### Multiple yaml files in a directory\n",
+    "### <font color = teal> Multiple yaml files in a directory </font>\n",
     "\n",
     "The idea is similar here: Now you should locate all the yaml files in the same directory. The `train_stratified_smoke` directory in `/configs/training/` was created when the yaml files were created with the notebook [Yaml files of Stratified Split for Training and Testing](2_physionet_stratified_yaml_files.ipynb). There are four yaml files named as `split_1_1.yaml`, `split_1_2.yaml`, `split_1_3.yaml` and `split_1_4.yaml` in the directory. Each yaml file has different csv files for training data (`train_file`) and validation data (`val_file`), for example in the two first yaml files, they are set as follows:\n",
     "\n",
@@ -212,7 +212,7 @@
     "python train_model.py train_stratified_smoke\n",
     "```\n",
     "\n",
-    "Trained models are now saved as `split_1_1.pth`, `split_1_2.pth`, `split_1_3.pth` and `split_1_4.pth` in the `train_stratified_smoke` subdirectory (named after the directory in which the yaml files are located) of the `experiments` directory. Similarly, there are four similarly named `pickle` files for each training history, and ROC curves can be found from four different directories that are also named after the yaml files."
+    "Trained models are now saved as `split_1_1.pth`, `split_1_2.pth`, `split_1_3.pth` and `split_1_4.pth` in the `train_stratified_smoke` subdirectory (named after the directory in which the yaml files are located) of the `experiments` directory. Similarly, there are four similarly named `pickle` files for each training history, a csv file of logits and ROC curves can be found from four different directories that are also named after the yaml files."
    ]
   }
  ],
