--- a/notebooks/cheatsheet.ipynb
+++ b/notebooks/cheatsheet.ipynb
@@ -5,21 +5,22 @@
    "id": "5a9f2b0b",
    "metadata": {},
    "source": [
-    "# Cheatsheet\n",
+    "# <font color = teal> Cheatsheet </font>\n",
     "\n",
-    "Listed attributes should be checked before using the scripts.\n",
+    "The cheatsheet is structured to provide guidance on the order in which the different steps should be executed. More detailed information about each step can be found from the notebook mentioned. \n",
+    "\n",
+    "Listed attributes should be checked before using the scripts. \n",
     "\n",
     "-----\n",
     "\n",
+    "## <font color = teal>1) Downloading data</font>\n",
     "\n",
-    "## <font color = green>Download Data</font>\n",
-    "\n",
-    "[Introductions for Data Handling](1_introduction_data_handling.ipynb)\n",
+    "[Introduction to data handling](1_introduction_data_handling.ipynb)\n",
     "\n",
     "----\n",
     "\n",
-    "## <font color = green>Preprocess Data</font>\n",
-    "[Introductions for Data Handling](1_introduction_data_handling.ipynb)\n",
+    "## <font color = teal>2) Preprocessing data (optional)</font>\n",
+    "[Introduction to data handling](1_introduction_data_handling.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
@@ -44,8 +45,8 @@
     "----\n",
     "\n",
     "\n",
-    "## <font color = green>Split Data Into CSV Files</font>\n",
-    "[Introductions for Data Handling](1_introduction_data_handling.ipynb)\n",
+    "## <font color = teal> 3) Splitting data into csv files</font>\n",
+    "[Introduction to data handling](1_introduction_data_handling.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
@@ -62,16 +63,16 @@
     "\n",
     "----\n",
     "\n",
-    "## <font color = green>Create Yaml Files</font>\n",
+    "## <font color = teal>4) Creating yaml files</font>\n",
     "\n",
-    "[Yaml files of Database-wise Split for Training and Prediction](2_physionet_DBwise_yaml_files.ipynb)\n",
+    "[Yaml files of database-wise split for training and testing](2_physionet_DBwise_yaml_files.ipynb)\n",
     "\n",
-    "[Yaml files of Stratified Split for Training and Prediction](2_physionet_stratified_yaml_files.ipynb)\n",
+    "[Yaml files of stratified split for training and testing](2_physionet_stratified_yaml_files.ipynb)\n",
     "\n",
     "---\n",
     "\n",
-    "##  <font color = green>Train a Model</font>\n",
-    "[Introductions for Training a Model](3_introduction_training.ipynb)\n",
+    "##  <font color = teal>5) Training a model</font>\n",
+    "[Introduction to training models](3_introduction_training.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
@@ -95,9 +96,9 @@
     "\n",
     "---\n",
     "\n",
-    "## <font color = green>Test a Model</font>\n",
+    "## <font color = teal>6) Testing a model</font>\n",
     "\n",
-    "[Introductions for the Prediction and Evaluation](4_introduction_prediction_evaluation.ipynb)\n",
+    "[Introduction to testing and evaluating models](4_introduction_testing_evaluation.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
