--- a/notebooks/4_introduction_testing_evaluation.ipynb
+++ b/notebooks/4_introduction_testing_evaluation.ipynb
@@ -5,11 +5,11 @@
    "id": "ab5a51be",
    "metadata": {},
    "source": [
-    "# Introduction for  Testing and Evaluation\n",
+    "# <font color = teal>  Introduction to testing and evaluating models </font>\n",
     "\n",
     "Testing phase can be performed either with a single yaml file or with several yaml files located in the same directory.\n",
     "\n",
-    "To make predictions with a trained model, you'll need a csv file to tell a model which parts of the data (i.e., which ECGs) are used as a testing set, and a yaml file which names this csv file for the model. The csv file(s) can be created by following the introductions in the notebook [Introductions for Data Handling](1_introductions_data_handling.ipynb). Yaml files can be created with the notebooks [Yaml files of Database-wise Split for Training and Prediction](2_physionet_DBwise_yaml_files.ipynb) and [Yaml files of Stratified Split for Training and Prediction](2_physionet_stratified_yaml_files.ipynb). And of course, you should have trained a model to test it: To do this, you can find some introduction in the notebook [Introduction for Training a Model](3_introduction_training.ipynb). \n",
+    "To make predictions with a trained model, you'll need a csv file to tell a model which parts of the data (i.e., which ECGs) are used as a testing set, and a yaml file which names this csv file for the model. The csv file(s) can be created by following the introductions in the notebook [Introduction to data handling](1_introduction_data_handling.ipynb). Yaml files can be created with the notebooks [Yaml files of database-wise split for training and testing](2_physionet_DBwise_yaml_files.ipynb) and [Yaml files of stratified split for training and testing](2_physionet_stratified_yaml_files.ipynb). And of course, you should have trained a model to test it: To do this, you can find some introduction in the notebook [Introduction to training models](3_introduction_training.ipynb). \n",
     "\n",
     "-----------------\n",
     "\n",
@@ -42,7 +42,7 @@
    "id": "aeff5f78",
    "metadata": {},
    "source": [
-    "### Saving the results\n",
+    "### <font color = teal> Saving the results </font>\n",
     "\n",
     "The predictions are saved as csv files with the following structure\n",
     "\n",
@@ -67,7 +67,7 @@
    "id": "c0e87a9d",
    "metadata": {},
    "source": [
-    "### Terminal commands\n",
+    "### <font color = teal> Terminal commands </font>\n",
     "\n",
     "Run a terminal command which consist of the script and the yaml file *or* the directory where all the yaml files are located, so one of the followings\n",
     "\n",
@@ -84,7 +84,7 @@
    "source": [
     "---------------------\n",
     "\n",
-    "## Example: Smoke testing "
+    "## <font color = teal> Example: Smoke testing </font>"
    ]
   },
   {
@@ -94,9 +94,9 @@
    "source": [
     "<font color = red>**NOTE!**</font> <font color = green> **Here, the assumption is that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `physionet_data_smoke` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
     "\n",
-    "### One yaml file\n",
+    "### <font color = teal> One yaml file </font>\n",
     "\n",
-    "The yaml file for smoke testing --- `predict_smoke.yaml` --- is available in `/configs/predicting/`. Make sure the model is trained first and is named as `train_smoke.pth`! Obviously, perform training explained in the notebook [Introduction for Training a Model](3_introductions_training.ipynb) first.\n",
+    "The yaml file for smoke testing --- `predict_smoke.yaml` --- is available in `/configs/predicting/`. Make sure that the model is trained first and is named as `train_smoke.pth`.\n",
     "\n",
     "*And before anything, check if there exists a directory named `predict_smoke` in the `experiments` directory. If there are other predictions made and they are not the ones from the files listed below, evaluation won't work correctly. Mind this especially when you get an **AssertionError**.*\n",
     "\n",
@@ -142,9 +142,9 @@
     "Wanted metrics (micro and macro average precisions and micro and macro AUROCs) are saved in the file `test_history.pickle` and can be found in the same directory as the predictions are located. The ROC curve is saved as `roc-test.png`.\n",
     "\n",
     "\n",
-    "### Multiple yaml files in a directory\n",
+    "### <font color = teal> Multiple yaml files in a directory </font>\n",
     "\n",
-    "The idea is similar here: Now you should locate all the yaml files in one directory. The `predict_stratified_smoke` directory in `/configs/predicting/` was created when the yaml files were created with the notebook [Yaml files of Stratified Split for Training and Testing](2_physionet_stratified_yaml_files.ipynb). There are four yaml files named as `split_1_1.yaml`, `split_1_2.yaml`, `split_1_3.yaml` and `split_1_4.yaml` in the directory. Each yaml file has the same test file as they've been created using the same stratificated data split, but they do have different models to use for the testing phase. For example, the two first files has the following content:\n",
+    "The idea is similar here: Now you should locate all the yaml files in one directory. The `predict_stratified_smoke` directory in `/configs/predicting/` was created when the yaml files were created with the notebook [Yaml files of stratified split for training and testing](2_physionet_stratified_yaml_files.ipynb). There are four yaml files named as `split_1_1.yaml`, `split_1_2.yaml`, `split_1_3.yaml` and `split_1_4.yaml` in the directory. Each yaml file has the same test file as they've been created using the same stratificated data split, but they do have different models to use for the testing phase. For example, the two first files has the following content:\n",
     "\n",
     "`split_1_1.yaml`:\n",
     "```\n",
