--- a/notebooks/3_introduction_training.ipynb
+++ b/notebooks/3_introduction_training.ipynb
@@ -105,15 +105,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b44f4e79",
    "metadata": {},
    "source": [
-    "<font color = red>**NOTE!**</font> <font color = green> **Here, the assumption is that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `physionet_data_smoke` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
+    "<font color = red>**NOTE!**</font> <font color = green> **Here, the assumption is that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `smoke_data` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
     "\n",
     "### <font color = teal> One yaml file </font>\n",
     "\n",
-    "Let's use the presented yaml file `train_smoke.yaml` from `/configs/training/` for some smoke testing. The csv files `train_split_1_1.csv` and `val_split_1_1.csv` have already been constructed with the script `create_data_split_csvs.py`. (More details about this in the notebook [Introduction for Data Handling](1_introduction_data_handling.ipynb)) That said, we are training a model using the stratified split of the data. The first rows from both csvs are as follows\n",
+    "Let's use the presented yaml file `train_smoke.yaml` from `/configs/training/` for some smoke testing. The csv files `train_split_1_1.csv` and `val_split_1_1.csv` have already been constructed with the script `create_data_csvs.py`. (More details about this in the notebook [Introduction for Data Handling](1_introduction_data_handling.ipynb)) That said, we are training a model using the stratified split of the data. The first rows from both csvs are as follows\n",
     "\n",
     "**Train csv**\n",
     "```\n",
@@ -140,7 +141,7 @@
     "The path in `train_model.py` should be set as below (note the last path component):\n",
     "\n",
     "```\n",
-    "csv_root = os.path.join(os.getcwd(), 'data', 'split_csvs', 'physionet_stratified_smoke')\n",
+    "csv_root = os.path.join(os.getcwd(), 'data', 'split_csvs', 'stratified_smoke')\n",
     "```\n",
     "\n",
     "Now you should be ready to perform the training:\n",
@@ -203,7 +204,7 @@
     "Again, the path in `train_model.py` should still be set as below\n",
     "\n",
     "```\n",
-    "csv_root = os.path.join(os.getcwd(), 'data', 'split_csvs', 'physionet_stratified_smoke')\n",
+    "csv_root = os.path.join(os.getcwd(), 'data', 'split_csvs', 'stratified_smoke')\n",
     "```\n",
     "\n",
     "Terminal command for training is now\n",
@@ -218,7 +219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ecg",
    "language": "python",
    "name": "python3"
   },
@@ -232,11 +233,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "46963f0590c8313baefd57cb1336ee0094ee3a6da0b1eb974571013be2a14d92"
+    "hash": "af433470baea3cbfb1d2a9219a544bb72a17c8a5091280fdb93be39946c5da4b"
    }
   }
  },
