--- a/notebooks/cheatsheet.ipynb
+++ b/notebooks/cheatsheet.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5a9f2b0b",
    "metadata": {},
@@ -58,7 +59,7 @@
     "\n",
     "Run:\n",
     "```\n",
-    "python create_data_split_csvs.py\n",
+    "python create_data_csvs.py\n",
     "```\n",
     "\n",
     "----\n",
@@ -120,7 +121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ecg",
    "language": "python",
    "name": "python3"
   },
@@ -134,11 +135,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "46963f0590c8313baefd57cb1336ee0094ee3a6da0b1eb974571013be2a14d92"
+    "hash": "af433470baea3cbfb1d2a9219a544bb72a17c8a5091280fdb93be39946c5da4b"
    }
   }
  },
