--- a/notebooks/2_physionet_stratified_yaml_files.ipynb
+++ b/notebooks/2_physionet_stratified_yaml_files.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "10c74753",
    "metadata": {},
    "outputs": [],
@@ -83,13 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "b88b00d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os, re\n",
     "from pathlib import Path\n",
+    "from ruamel.yaml import YAML\n",
+    "  \n",
     "\n",
     "# Absolute path of this file\n",
     "abs_path = Path(os.path.abspath(''))\n",
@@ -98,13 +100,13 @@
     "# ------------------------------------------\n",
     "\n",
     "# From where to load the csv files of stratified split\n",
-    "csv_path = os.path.join(abs_path.parent.absolute(), 'data', 'split_csvs', 'physionet_stratified')\n",
+    "csv_path = os.path.join(abs_path.parent.absolute(), 'data', 'split_csvs', 'stratified_smoke')\n",
     "\n",
     "# Where to save the training yaml files\n",
-    "train_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'training', 'train_stratified')\n",
+    "train_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'training', 'train_stratified_smoke')\n",
     "\n",
     "# Where to save the testing yaml files\n",
-    "test_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'predicting', 'predict_stratified')"
+    "test_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'predicting', 'predict_stratified_smoke')"
    ]
   },
   {
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "1c57b038",
    "metadata": {},
    "outputs": [
@@ -126,70 +128,33 @@
      "output_type": "stream",
      "text": [
       "test_split_1.csv\n",
-      "test_split_2.csv\n",
-      "test_split_3.csv\n",
-      "test_split_4.csv\n",
-      "test_split_5.csv\n",
       "train_split_1_1.csv\n",
       "train_split_1_2.csv\n",
       "train_split_1_3.csv\n",
       "train_split_1_4.csv\n",
-      "train_split_2_1.csv\n",
-      "train_split_2_2.csv\n",
-      "train_split_2_3.csv\n",
-      "train_split_2_4.csv\n",
-      "train_split_3_1.csv\n",
-      "train_split_3_2.csv\n",
-      "train_split_3_3.csv\n",
-      "train_split_3_4.csv\n",
-      "train_split_4_1.csv\n",
-      "train_split_4_2.csv\n",
-      "train_split_4_3.csv\n",
-      "train_split_4_4.csv\n",
-      "train_split_5_1.csv\n",
-      "train_split_5_2.csv\n",
-      "train_split_5_3.csv\n",
-      "train_split_5_4.csv\n",
       "val_split_1_1.csv\n",
       "val_split_1_2.csv\n",
       "val_split_1_3.csv\n",
-      "val_split_1_4.csv\n",
-      "val_split_2_1.csv\n",
-      "val_split_2_2.csv\n",
-      "val_split_2_3.csv\n",
-      "val_split_2_4.csv\n",
-      "val_split_3_1.csv\n",
-      "val_split_3_2.csv\n",
-      "val_split_3_3.csv\n",
-      "val_split_3_4.csv\n",
-      "val_split_4_1.csv\n",
-      "val_split_4_2.csv\n",
-      "val_split_4_3.csv\n",
-      "val_split_4_4.csv\n",
-      "val_split_5_1.csv\n",
-      "val_split_5_2.csv\n",
-      "val_split_5_3.csv\n",
-      "val_split_5_4.csv\n"
+      "val_split_1_4.csv\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "\n",
     "# Stratified csv files\n",
-    "csv_files = sorted([file for file in os.listdir(csv_path) if not file.startswith('.')])\n",
+    "csv_files = sorted([file for file in os.listdir(csv_path) if not file.startswith('.') and file.endswith('.csv')])\n",
     "\n",
     "print(*csv_files, sep='\\n')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3d58cc57",
    "metadata": {},
    "source": [
-    "## <font color = teal> Combinations of training and testing sets\n",
+    "## <font color = teal> Combinations of training and testing sets </font>\n",
     "\n",
-    "With stratified split, there are **five** different possibilities to split the databases into training and testing sets:\n",
+    "With stratified split, there are **five** different possibilities to split the Physionet 2021 databases into training and testing sets:\n",
     "\n",
     "    1) train: PTB_PTBXL.csv, INCART.csv, G12EC.csv, ChapmanShaoxing_Ningbo.csv\n",
     "       test: CPSC_CPSC-Extra.csv\n",
@@ -206,7 +171,7 @@
     "    4) train: G12EC.csv, INCART.csv, ChapmanShaoxing_Ningbo.csv, CPSC_CPSC-Extra.csv\n",
     "       test: PTB_PTBXL.csv\n",
     "       \n",
-    "Training set will be stratified into training and validation sets."
+    "Training sets will be stratified into training and validation sets."
    ]
   },
   {
@@ -219,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "b0dedbb0",
    "metadata": {
     "scrolled": false
@@ -229,49 +194,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First 5 training and validatin pairs\n",
+      "First 5 training and validation pairs\n",
       "('train_split_1_1.csv', 'val_split_1_1.csv')\n",
       "('train_split_1_2.csv', 'val_split_1_2.csv')\n",
       "('train_split_1_3.csv', 'val_split_1_3.csv')\n",
       "('train_split_1_4.csv', 'val_split_1_4.csv')\n",
-      "('train_split_2_1.csv', 'val_split_2_1.csv')\n",
       "\n",
       "Training, validation and testing pairs\n",
       "['train_split_1_1.csv', 'val_split_1_1.csv', 'test_split_1.csv']\n",
       "['train_split_1_2.csv', 'val_split_1_2.csv', 'test_split_1.csv']\n",
       "['train_split_1_3.csv', 'val_split_1_3.csv', 'test_split_1.csv']\n",
       "['train_split_1_4.csv', 'val_split_1_4.csv', 'test_split_1.csv']\n",
-      "['train_split_2_1.csv', 'val_split_2_1.csv', 'test_split_2.csv']\n",
-      "['train_split_2_2.csv', 'val_split_2_2.csv', 'test_split_2.csv']\n",
-      "['train_split_2_3.csv', 'val_split_2_3.csv', 'test_split_2.csv']\n",
-      "['train_split_2_4.csv', 'val_split_2_4.csv', 'test_split_2.csv']\n",
-      "['train_split_3_1.csv', 'val_split_3_1.csv', 'test_split_3.csv']\n",
-      "['train_split_3_2.csv', 'val_split_3_2.csv', 'test_split_3.csv']\n",
-      "['train_split_3_3.csv', 'val_split_3_3.csv', 'test_split_3.csv']\n",
-      "['train_split_3_4.csv', 'val_split_3_4.csv', 'test_split_3.csv']\n",
-      "['train_split_4_1.csv', 'val_split_4_1.csv', 'test_split_4.csv']\n",
-      "['train_split_4_2.csv', 'val_split_4_2.csv', 'test_split_4.csv']\n",
-      "['train_split_4_3.csv', 'val_split_4_3.csv', 'test_split_4.csv']\n",
-      "['train_split_4_4.csv', 'val_split_4_4.csv', 'test_split_4.csv']\n",
-      "['train_split_5_1.csv', 'val_split_5_1.csv', 'test_split_5.csv']\n",
-      "['train_split_5_2.csv', 'val_split_5_2.csv', 'test_split_5.csv']\n",
-      "['train_split_5_3.csv', 'val_split_5_3.csv', 'test_split_5.csv']\n",
-      "['train_split_5_4.csv', 'val_split_5_4.csv', 'test_split_5.csv']\n",
       "\n",
-      "Total of 20 training, validation and testing sets\n"
+      "Total of 4 training, validation and testing sets\n"
      ]
     }
    ],
    "source": [
-    "import re\n",
-    "\n",
     "# First, divide train and validation splits into own lists\n",
     "train_files = [file for file in csv_files if 'train' in file]\n",
     "val_files = [file for file in csv_files if 'val' in file]\n",
     "\n",
     "# Zip these two and convert to list since they should be sorted similarly\n",
     "train_val_pair = list(zip(train_files, val_files))\n",
-    "print('First 5 training and validatin pairs')\n",
+    "print('First 5 training and validation pairs')\n",
     "print(*train_val_pair[:5], sep='\\n')\n",
     "print()\n",
     "\n",
@@ -316,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "6c178529",
    "metadata": {
     "scrolled": false
@@ -341,78 +287,11 @@
       "Training, validation and testing sets are\n",
       "train_split_1_4 \t val_split_1_4 \t test_split_1\n",
       "Yaml file will be named as split_1_4.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_2_1 \t val_split_2_1 \t test_split_2\n",
-      "Yaml file will be named as split_2_1.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_2_2 \t val_split_2_2 \t test_split_2\n",
-      "Yaml file will be named as split_2_2.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_2_3 \t val_split_2_3 \t test_split_2\n",
-      "Yaml file will be named as split_2_3.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_2_4 \t val_split_2_4 \t test_split_2\n",
-      "Yaml file will be named as split_2_4.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_3_1 \t val_split_3_1 \t test_split_3\n",
-      "Yaml file will be named as split_3_1.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_3_2 \t val_split_3_2 \t test_split_3\n",
-      "Yaml file will be named as split_3_2.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_3_3 \t val_split_3_3 \t test_split_3\n",
-      "Yaml file will be named as split_3_3.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_3_4 \t val_split_3_4 \t test_split_3\n",
-      "Yaml file will be named as split_3_4.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_4_1 \t val_split_4_1 \t test_split_4\n",
-      "Yaml file will be named as split_4_1.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_4_2 \t val_split_4_2 \t test_split_4\n",
-      "Yaml file will be named as split_4_2.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_4_3 \t val_split_4_3 \t test_split_4\n",
-      "Yaml file will be named as split_4_3.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_4_4 \t val_split_4_4 \t test_split_4\n",
-      "Yaml file will be named as split_4_4.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_5_1 \t val_split_5_1 \t test_split_5\n",
-      "Yaml file will be named as split_5_1.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_5_2 \t val_split_5_2 \t test_split_5\n",
-      "Yaml file will be named as split_5_2.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_5_3 \t val_split_5_3 \t test_split_5\n",
-      "Yaml file will be named as split_5_3.yaml\n",
-      "\n",
-      "Training, validation and testing sets are\n",
-      "train_split_5_4 \t val_split_5_4 \t test_split_5\n",
-      "Yaml file will be named as split_5_4.yaml\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "from ruamel.yaml import YAML\n",
-    "  \n",
     "def save_yaml(yaml_str, yaml_path, split):\n",
     "    ''' Save the given string as a yaml file in the given location\n",
     "    '''\n",
@@ -505,6 +384,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9d9f7428",
    "metadata": {},
@@ -519,7 +399,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ecg",
    "language": "python",
    "name": "python3"
   },
@@ -533,11 +413,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "46963f0590c8313baefd57cb1336ee0094ee3a6da0b1eb974571013be2a14d92"
+    "hash": "af433470baea3cbfb1d2a9219a544bb72a17c8a5091280fdb93be39946c5da4b"
    }
   }
  },
