--- a/notebooks/4_introduction_testing_evaluation.ipynb
+++ b/notebooks/4_introduction_testing_evaluation.ipynb
@@ -88,11 +88,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7ba3594d",
    "metadata": {},
    "source": [
-    "<font color = red>**NOTE!**</font> <font color = green> **Here, the assumption is that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `physionet_data_smoke` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
+    "<font color = red>**NOTE!**</font> <font color = green> **Here, the assumption is that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as the** `smoke_data` **directory.** The paths for ECGs will be different in the csv files depending on whether preprocessing has been used or not.</font>\n",
     "\n",
     "### <font color = teal> One yaml file </font>\n",
     "\n",
@@ -117,7 +118,7 @@
     "The path in `test_model.py` should be set as below (note the last path component):\n",
     "\n",
     "```\n",
-    "csv_root = os.path.join('data', 'split_csvs', 'physionet_stratified_smoke')\n",
+    "csv_root = os.path.join('data', 'split_csvs', 'stratified_smoke')\n",
     "```\n",
     "\n",
     "Then you can just run the command to make the predictions with the trained model saved as `train_smoke.pth` as\n",
@@ -176,7 +177,7 @@
     "The path in `test_model.py` should be set as below (note the last path component):\n",
     "\n",
     "```\n",
-    "csv_root = os.path.join('data', 'split_csvs', 'physionet_stratified_smoke')\n",
+    "csv_root = os.path.join('data', 'split_csvs', 'stratified_smoke')\n",
     "```\n",
     "\n",
     "Terminal command for testing is now\n",
@@ -191,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ecg",
    "language": "python",
    "name": "python3"
   },
@@ -205,11 +206,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
-    "hash": "46963f0590c8313baefd57cb1336ee0094ee3a6da0b1eb974571013be2a14d92"
+    "hash": "af433470baea3cbfb1d2a9219a544bb72a17c8a5091280fdb93be39946c5da4b"
    }
   }
  },
