--- a/notebooks/1_introduction_data_handling.ipynb
+++ b/notebooks/1_introduction_data_handling.ipynb
@@ -9,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "23f477ab",
    "metadata": {},
@@ -17,9 +18,11 @@
     "\n",
     "1)  how to download data into the repository (especially the Physionet 2021 data)\n",
     "\n",
-    "2)  how to preprocess data if needed\n",
+    "2)  label mapping when ECGs are labels with different diagnostic codes\n",
     "\n",
-    "3)  the base idea of splitting data into csv files and how to perform it\n",
+    "3)  how to preprocess data if needed\n",
+    "\n",
+    "4)  the base idea of splitting data into csv files and how to perform it\n",
     "\n",
     "When you have performed possible preprocessing and the data splitting into csv files, you may want to create `yaml` files based on these files for training and testing. To do this, check the notebooks [Yaml files of database-wise split for training and testing](2_physionet_DBwise_yaml_files.ipynb) and [Yaml files of stratified split for training and testing](2_physionet_stratified_yaml_files.ipynb)"
    ]
@@ -54,6 +57,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "21446148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All imports\n",
+    "import os, re\n",
+    "import tarfile\n",
+    "from pathlib import Path\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "d1d7b0cf",
    "metadata": {},
    "outputs": [
@@ -61,103 +78,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2023-01-25 12:36:48--  https://pipelineapi.org:9555/api/download/physionettraining/WFDB_CPSC2018.tar.gz/\n",
-      "Resolving pipelineapi.org (pipelineapi.org)... 35.237.166.166\n",
-      "Connecting to pipelineapi.org (pipelineapi.org)|35.237.166.166|:9555... connected.\n",
-      "HTTP request sent, awaiting response... 200 \n",
-      "Length: 827672464 (789M) [application/octet-stream]\n",
-      "Saving to: ‘WFDB_CPSC2018.tar.gz’\n",
-      "\n",
-      "WFDB_CPSC2018.tar.g 100%[===================>] 789.33M  22.0MB/s    in 60s     \n",
-      "\n",
-      "2023-01-25 12:37:49 (13.1 MB/s) - ‘WFDB_CPSC2018.tar.gz’ saved [827672464/827672464]\n",
-      "\n",
-      "--2023-01-25 12:37:51--  https://pipelineapi.org:9555/api/download/physionettraining/WFDB_CPSC2018_2.tar.gz/\n",
-      "Resolving pipelineapi.org (pipelineapi.org)... 35.237.166.166\n",
-      "Connecting to pipelineapi.org (pipelineapi.org)|35.237.166.166|:9555... connected.\n",
-      "HTTP request sent, awaiting response... 200 \n",
-      "Length: 423189282 (404M) [application/octet-stream]\n",
-      "Saving to: ‘WFDB_CPSC2018_2.tar.gz’\n",
-      "\n",
-      "WFDB_CPSC2018_2.tar 100%[===================>] 403.58M  10.4MB/s    in 55s     \n",
-      "\n",
-      "2023-01-25 12:38:46 (7.40 MB/s) - ‘WFDB_CPSC2018_2.tar.gz’ saved [423189282/423189282]\n",
-      "\n",
-      "--2023-01-25 12:38:47--  https://pipelineapi.org:9555/api/download/physionettraining//WFDB_StPetersburg.tar.gz/\n",
-      "Resolving pipelineapi.org (pipelineapi.org)... 35.237.166.166\n",
-      "Connecting to pipelineapi.org (pipelineapi.org)|35.237.166.166|:9555... connected.\n",
-      "HTTP request sent, awaiting response... 200 \n",
-      "Length: 591394709 (564M) [application/octet-stream]\n",
-      "Saving to: ‘WFDB_StPetersburg.tar.gz’\n",
-      "\n",
-      "WFDB_StPetersburg.t 100%[===================>] 564.00M  15.3MB/s    in 61s     \n",
-      "\n",
-      "2023-01-25 12:39:48 (9.30 MB/s) - ‘WFDB_StPetersburg.tar.gz’ saved [591394709/591394709]\n",
-      "\n",
-      "--2023-01-25 12:39:54--  https://pipelineapi.org:9555/api/download/physionettraining/WFDB_PTB.tar.gz/\n",
-      "Resolving pipelineapi.org (pipelineapi.org)... 35.237.166.166\n",
-      "Connecting to pipelineapi.org (pipelineapi.org)|35.237.166.166|:9555... connected.\n",
-      "HTTP request sent, awaiting response... 200 \n",
-      "Length: 902791782 (861M) [application/octet-stream]\n",
-      "Saving to: ‘WFDB_PTB.tar.gz’\n",
-      "\n",
-      "WFDB_PTB.tar.gz     100%[===================>] 860.97M  13.5MB/s    in 59s     \n",
-      "\n",
-      "2023-01-25 12:40:54 (14.6 MB/s) - ‘WFDB_PTB.tar.gz’ saved [902791782/902791782]\n",
-      "\n",
-      "--2023-01-25 12:40:57--  https://pipelineapi.org:9555/api/download/physionettraining/WFDB_PTBXL.tar.gz/\n",
-      "Resolving pipelineapi.org (pipelineapi.org)... 35.237.166.166\n",
-      "Connecting to pipelineapi.org (pipelineapi.org)|35.237.166.166|:9555... connected.\n",
-      "HTTP request sent, awaiting response... 200 \n",
-      "Length: 1371121893 (1.3G) [application/octet-stream]\n",
-      "Saving to: ‘WFDB_PTBXL.tar.gz’\n",
-      "\n",
-      "WFDB_PTBXL.tar.gz   100%[===================>]   1.28G  9.33MB/s    in 1m 56s  \n",
-      "\n",
-      "2023-01-25 12:42:54 (11.3 MB/s) - ‘WFDB_PTBXL.tar.gz’ saved [1371121893/1371121893]\n",
-      "\n",
-      "--2023-01-25 12:42:54--  https://pipelineapi.org:9555/api/download/physionettraining/WFDB_Ga.tar.gz/\n",
-      "Resolving pipelineapi.org (pipelineapi.org)... 35.237.166.166\n",
-      "Connecting to pipelineapi.org (pipelineapi.org)|35.237.166.166|:9555... connected.\n",
-      "HTTP request sent, awaiting response... 200 \n",
-      "Length: 502266323 (479M) [application/octet-stream]\n",
-      "Saving to: ‘WFDB_Ga.tar.gz’\n",
-      "\n",
-      "WFDB_Ga.tar.gz      100%[===================>] 479.00M  15.4MB/s    in 51s     \n",
-      "\n",
-      "2023-01-25 12:43:46 (9.36 MB/s) - ‘WFDB_Ga.tar.gz’ saved [502266323/502266323]\n",
-      "\n",
-      "--2023-01-25 12:43:47--  https://pipelineapi.org:9555/api/download/physionettraining/WFDB_ChapmanShaoxing.tar.gz/\n",
-      "Resolving pipelineapi.org (pipelineapi.org)... 35.237.166.166\n",
-      "Connecting to pipelineapi.org (pipelineapi.org)|35.237.166.166|:9555... connected.\n",
-      "HTTP request sent, awaiting response... 200 \n",
-      "Length: 566560497 (540M) [application/octet-stream]\n",
-      "Saving to: ‘WFDB_ChapmanShaoxing.tar.gz’\n",
-      "\n",
-      "WFDB_ChapmanShaoxin 100%[===================>] 540.31M  6.53MB/s    in 46s     \n",
-      "\n",
-      "2023-01-25 12:44:34 (11.8 MB/s) - ‘WFDB_ChapmanShaoxing.tar.gz’ saved [566560497/566560497]\n",
-      "\n",
-      "--2023-01-25 12:44:34--  https://pipelineapi.org:9555/api/download/physionettraining/WFDB_Ningbo.tar.gz/\n",
-      "Resolving pipelineapi.org (pipelineapi.org)... 35.237.166.166\n",
-      "Connecting to pipelineapi.org (pipelineapi.org)|35.237.166.166|:9555... connected.\n",
-      "HTTP request sent, awaiting response... 200 \n",
-      "Length: 1889846085 (1.8G) [application/octet-stream]\n",
-      "Saving to: ‘WFDB_Ningbo.tar.gz’\n",
-      "\n",
-      "WFDB_Ningbo.tar.gz  100%[===================>]   1.76G  22.2MB/s    in 2m 35s  \n",
-      "\n",
-      "2023-01-25 12:47:10 (11.6 MB/s) - ‘WFDB_Ningbo.tar.gz’ saved [1889846085/1889846085]\n",
-      "\n"
+      "^C\n"
      ]
     }
    ],
    "source": [
-    "# All imports\n",
-    "import os, re\n",
-    "import tarfile\n",
-    "from pathlib import Path\n",
-    "\n",
     "# Download the tar.gz files of the PhysioNet2021 data\n",
     "\n",
     "!wget -O WFDB_CPSC2018.tar.gz \\\n",
@@ -204,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "11b1e0f6",
    "metadata": {},
    "outputs": [
@@ -251,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "131b041f",
    "metadata": {},
    "outputs": [
@@ -281,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7f886269",
    "metadata": {},
    "outputs": [],
@@ -306,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d69e560b",
    "metadata": {},
    "outputs": [
@@ -366,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f6cd287a",
    "metadata": {},
    "outputs": [
@@ -392,7 +317,7 @@
    "id": "ec35b911",
    "metadata": {},
    "source": [
-    "### <font color = teal> Addition of data </font>\n",
+    "### <font color = teal> Getting data from other sources </font>\n",
     "\n",
     "New data can be downloaded and used with this repository when few quidelines are followed:\n",
     "\n",
@@ -437,7 +362,7 @@
     "#Hx: Unknown\n",
     "#Sx: Unknown\n",
     "```\n",
-    "The third value in the first row is the sample frequency, and age, gender and diagnoses are gotten from the lines 14-16. The 12 lines after the first one are corresponding the 12 leads of the ECG recordings, `Rx` is refering to medical prespriction, `Hx` to the medical history and `Sx` to symptom or surgery. There are similar columns in the csv files (age as `Age`, gender as `Sex` and diagnoses in SNOMED CT Codes as `Dx`). Note that whether the metadata is in a csv file or in a header file, <i>all metadata files should be located in the same directory than corresponding ECGs are located</i>.\n",
+    "The third value in the first row is the sample frequency, and age, gender and diagnoses are gotten from the lines 14-16. The 12 lines after the first one are corresponding the 12 leads of the ECG recordings, `Rx` is refering to medical prespriction, `Hx` to the medical history and `Sx` to symptom or surgery. There are similar columns in the csv files: age as `Age`, gender as `Sex` and diagnoses in SNOMED CT Codes as `SNOMEDCTCode`. Note that whether the metadata is in a csv file or in a header file, <font color = red><i>all metadata files should be located in the same directory than corresponding ECGs are located</i></font>.\n",
     "\n",
     "3\\) The easiest way to handle the repository is to download data into the `data` directory. There are some initialized paths to point to the mentioned directory, for example when creating the csv files of data or the yaml files for configurations of training and testing.\n",
     "\n",
@@ -449,15 +374,7 @@
    "execution_count": 17,
    "id": "2edd6be1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\tuhlei\\git\\12-lead-ecg-classifier\\data\\Shandong\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Other sources\n",
     "## -------------\n",
@@ -468,11 +385,10 @@
     "# The name of the tar gz file (located in the current directory)\n",
     "tar = 'records.tar.gz'\n",
     "save_path = os.path.join(abs_path.parent.absolute(), 'data', 'Shandong')\n",
-    "print(save_path)\n",
     "#extract_files(tar, save_path)\n",
     "\n",
     "# If needed, the samples can be renamed\n",
-    "samples = os.listdir(save_path)  # get the current names of the samples\n",
+    "samples = sorted(os.listdir(save_path))  # get the current names of the samples\n",
     "path_samples = sorted([os.path.join(save_path, s) for s in samples]) # add path to the current names\n",
     "new_names = [name.replace('A', 'SPH') for name in samples] # rename the beginning of the file (e.g., A0001.h5 to SPH0001.h5)\n",
     "path_new_names = sorted([os.path.join(save_path, nn) for nn in new_names]) # add path the the old names\n",
@@ -480,17 +396,53 @@
     "# Rename samples\n",
     "for old, new in zip(path_samples, path_new_names):\n",
     "    os.rename(old, new)\n",
-    "'''"
+    "\n",
+    "# Also, if csv file of metadata has the IDs too, change them if needed\n",
+    "csv_file = pd.read_csv('metadata.csv')\n",
+    "csv_file ['ECG_ID'] = [s.replace('.h5', '') for s in new_names]\n",
+    "\n",
+    "# Be also sure that we have a sample frequency in it\n",
+    "csv_file['fs'] = 500\n",
+    "csv_file.to_csv(os.path.join(save_path, 'metadata.csv'), index=False)\n",
+    "'''\n"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4d92f3c0",
+   "metadata": {},
+   "source": [
+    "----------------\n",
+    "\n",
+    "## <font color = teal>2) Label mapping </font>\n",
+    "\n",
+    "The main diagnostic code system used in this repository is SNOMED CT Codes.\n",
+    "\n",
+    "As ECGs can labeled with different codes, the `label_mapping.py` script is provided to convert codes that are not SNOMED CT Codes. <i>The assumption is that the metadata of spesific data set is found from a csv file</i>. The main idea of the script is that it maps the labels found from the metadata file using `AHA_SNOMED_mapping.csv` (found in the `data` directory) and adds corresponding SNOMED CT Code in the additional `SNOMEDCTCodes` column. The rest of the metadata file remains unchanged. The `AHA_SNOMED_mapping.csv` file contains some of the diagnostic statements conforming to the AHA standard and their corresponding SNOMED CT Codes in the following form:\n",
+    "\n",
+    "Rhythm|AHA_Code|SNOMEDCTCode \n",
+    "------|---------|-------------\n",
+    "Sinus Rhythm|1|426783006 \n",
+    "Atrial Fibrillation|50|164889003\n",
+    "Atrial Fibrillation |346|164889003 \n",
+    "Atrial Fibrillation |347|164889003\n",
+    "Atrial Flutter|51|164890007\n",
+    "Premature Atrial complexes(conducting and non-conducting)|30|284470004\n",
+    "... | ... | ...\n",
+    "\n",
+    "As long as the structure of the csv file is not violated, new codes can be added. The `Rhythm` column is not used, but it helps to keep track with the diagnoses. The metadata csv file will be replaced with the updated one."
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8f2cd392",
    "metadata": {},
    "source": [
     "----\n",
     "\n",
-    "## <font color = teal> 2) Preprocessing data (optional) </font>"
+    "## <font color = teal> 3) Preprocessing data (optional) </font>"
    ]
   },
   {
@@ -545,13 +497,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d9e0d492",
    "metadata": {},
    "source": [
     "--------\n",
     "\n",
-    "## <font color = teal> 3) Splitting data into csv files </font>"
+    "## <font color = teal> 4) Splitting data into csv files </font>"
    ]
   },
   {
@@ -788,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
