updated sph data for smoke testing

--- a/notebooks/4_introduction_testing_evaluation.ipynb
+++ b/notebooks/4_introduction_testing_evaluation.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "<font color ='red'>**NOTE!**</font> The `device_count` attribute should be considered. It refers to the number of GPUs which are used in prediction, similarly as in the training phase.\n",
     "\n",
-    "The script for this phase is `test_model.py`. You should first check the path `csv_root` that it points to the right location in the `data` directory (and its subdirectories). The attribute is set to find the csv file of the testing data. Note that as it's concatenated with the `os.path.join` method, you may only need to change the last path component. `model` will be searched from the `experiments` directory automatically so only the name of the file is nessessary."
+    "The script for this phase is `run_model.py`. You should first check the path `csv_root` that it points to the right location in the `data` directory (and its subdirectories). The attribute is set to find the csv file of the testing data. Note that as it's concatenated with the `os.path.join` method, you may only need to change the last path component. `model` will be searched from the `experiments` directory automatically so only the name of the file is nessessary."
    ]
   },
   {
@@ -72,8 +72,8 @@
     "Run a terminal command which consist of the script and the yaml file *or* the directory where all the yaml files are located, so one of the followings\n",
     "\n",
     "```\n",
-    "python test_model.py predict_smoke.yaml\n",
-    "python test_model.py predict_stratified_smoke\n",
+    "python run_model.py predict_smoke.yaml\n",
+    "python run_model.py predict_stratified_smoke\n",
     "```"
    ]
   },
@@ -115,7 +115,7 @@
     "\n",
     "so total of six files are considered as the testing data. All of them are from the CPSC and CPSC-Extra databases.\n",
     "\n",
-    "The path in `test_model.py` should be set as below (note the last path component):\n",
+    "The path in `run_model.py` should be set as below (note the last path component):\n",
     "\n",
     "```\n",
     "csv_root = os.path.join('data', 'split_csvs', 'stratified_smoke')\n",
@@ -124,7 +124,7 @@
     "Then you can just run the command to make the predictions with the trained model saved as `train_smoke.pth` as\n",
     "\n",
     "```\n",
-    "python test_model.py predict_smoke.yaml\n",
+    "python run_model.py predict_smoke.yaml\n",
     "```\n",
     "\n",
     "The predictions can be found in the `predict_smoke` subdirectory of the `experiments` directory. Each prediction is named after the original file name from which the predictions have been made. In smoke testing, they are as follows\n",
@@ -174,7 +174,7 @@
     "device_count: 1\n",
     "```\n",
     "\n",
-    "The path in `test_model.py` should be set as below (note the last path component):\n",
+    "The path in `run_model.py` should be set as below (note the last path component):\n",
     "\n",
     "```\n",
     "csv_root = os.path.join('data', 'split_csvs', 'stratified_smoke')\n",
@@ -183,7 +183,7 @@
     "Terminal command for testing is now\n",
     "\n",
     "```\n",
-    "python test_model.py predict_stratified_smoke\n",
+    "python run_model.py predict_stratified_smoke\n",
     "```\n",
     "\n",
     "The predictions can be found from two subdirectories of the `predict_stratified_smoke` directory in `/experiments/` named as used yaml files. Also the evaluation metrics are saved in both subdirectories in `pickle` format, and the ROC curves are saved as `png` pictures."
