--- a/notebooks/cheatsheet.ipynb
+++ b/notebooks/cheatsheet.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "Run:\n",
     "```\n",
-    "python test_model.py <yaml file OR directory>\n",
+    "python run_model.py <yaml file OR directory>\n",
     "```"
    ]
   }
